KUBE/nginx-flask-mysql/kube/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-backend
  namespace: app1

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1-backend

  template:
    metadata:
      labels:
        app: app1-backend

    spec:
      automountServiceAccountToken: false

      containers:
        - name: backend
          image: docker.io/achalpadol/ingress-cont-backend:latest

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: db-password
              mountPath: /run/secrets
              readOnly: true

      volumes:
        - name: db-password
          secret:
            secretName: app1-db-secret
