KUBE/nginx-flask-mysql/kube/db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-db
  namespace: app1

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1-db

  template:
    metadata:
      labels:
        app: app1-db

    spec:
      automountServiceAccountToken: false

      containers:
        - name: db
          image: docker.io/achalpadol/ingress-cont-db:v2
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: db-password
              mountPath: /run/secrets
              readOnly: true

            - name: db-data
              mountPath: /var/lib/mysql

      volumes:
        - name: db-password
          secret:
            secretName: app1-db-secret

        - name: db-data
          persistentVolumeClaim:
            claimName: app1-db-pvc
