KUBE/nginx-flask-mysql/kube/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-db
  namespace: app1
spec:
  type: ClusterIP
  selector:
    app: app1-db
  ports:
    - port: 3306
      targetPort: 3306
