KUBE/nginx-flask-mysql/kube/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-backend
  namespace: app1
spec:
  type: ClusterIP

  selector:
    app: app1-backend

  ports:
    - port: 8000
      targetPort: 8000
