KUBE/nginx-flask-mysql/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: app-1
  ports:
    - port: 80
      targetPort: 80
